--- a/SRC/README
+++ b/SRC/README
@@ -10,7 +10,7 @@
    * CCMP
 
 ### Prerequisites:
-packetEssentials-1.0.2
+packetEssentials-1.0.8
 pbkdf2-1.3
 pycryptodomex-3.4.5
 rc4-0.1
@@ -22,9 +22,9 @@ scapy 2.4.0
         
 In the RESOURCEs folder you will find the python modules which have been tested.  As newer versions of the modules come out, sufficient testing must be done before they can be made known as "stable" with pyDot11.  Feel free to use pip or whatever method you would like to get these installed.  If you wish to use the modules locally provided with this git, then an installation would be something like so:
 ````bash
-pip install RESOURCEs/packetEssentials-1.0.2.tar.gz
+pip install RESOURCEs/packetEssentials-1.0.8.tar.gz
 pip install RESOURCEs/pbkdf2-1.3.tar.gz
-pip install RESOURCEs/pyDot11-2.0.1.tar.gz
+pip install RESOURCEs/pyDot11-2.0.7.tar.gz
 pip install RESOURCEs/pycryptodomex-3.4.5.tar.gz
 pip install RESOURCEs/rc4-0.1.tar.gz
 pip install RESOURCEs/scapy-2.4.0.tar.gz
@@ -64,7 +64,7 @@ python scripts/airpunt --help
 ### Various examples of other things you can do with pyDot11:
 <strong>We can <a href="https://github.com/ICSec/airpwn-ng">airpwn-ng!</href></strong>
 ````python
-## Example of grabbing an encrypted packet, decrypting it, and then replaying it:
+## Example of grabbing an encrypted ICMP echo-request, decrypting it, and then replaying it:
 from pyDot11 import *
 from scapy.utils import rdpcap
 encPkts = rdpcap('PCAPs/ICMPs/wep_pings.pcap')
@@ -75,7 +75,10 @@ encPkt = wepEncrypt(decPkt, '0123456789', iVal)
 encPkt.summary()
 encPkt
 encPkts[1]
-encPkt == encPkts[1]
+
+## At one point during development, I thought it created an exact copy.
+## Will chew on and debug this later.
+#encPkt == encPkts[1]
 ````
 
 ````python
